lib/y_dart/ffi/y_dart_bindings_generated.dart


/// Returns an iterator over a nested recursive structure of a current `YXmlElement`, starting from
/// first of its children. Returned values can be either `YXmlElement` or `YXmlText` nodes.
///
/// Use [yxmlelem_tree_walker_next] function in order to iterate over to a next node.
/// Use [yxmlelem_tree_walker_destroy] function to release resources used by the iterator.
@ffi.Native<
        ffi.Pointer<YXmlTreeWalker> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxmlelem_tree_walker', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YXmlTreeWalker> yxmlelem_tree_walker(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
);

/// Releases resources associated with a current XML tree walker iterator.
@ffi.Native<ffi.Void Function(ffi.Pointer<YXmlTreeWalker>)>(
    symbol: 'yxmlelem_tree_walker_destroy', assetId: 'package:y_dart/y_dart')
external void yxmlelem_tree_walker_destroy(
  ffi.Pointer<YXmlTreeWalker> iter,
);

/// Moves current `iterator` to a next value (either `YXmlElement` or `YXmlText`), returning its
/// pointer or a null, if an `iterator` already reached the last successor node.
///
/// Values returned by this function should be eventually released using [youtput_destroy].
@ffi.Native<ffi.Pointer<YOutput> Function(ffi.Pointer<YXmlTreeWalker>)>(
    symbol: 'yxmlelem_tree_walker_next', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> yxmlelem_tree_walker_next(
  ffi.Pointer<YXmlTreeWalker> iterator,
);

/// Inserts an `YXmlElement` as a child of a current node at the given `index` and returns its
/// pointer. Node created this way will have a given `name` as its tag (eg. `p` for `<p></p>` node).
///
/// An `index` value must be between 0 and (inclusive) length of a current XML element (use
/// [yxmlelem_child_len] function to determine its length).
///
/// A `name` must be a null-terminated UTF-8 encoded string, which will be copied into current
/// document. Therefore `name` should be freed by the function caller.
@ffi.Native<
        ffi.Pointer<Branch> Function(ffi.Pointer<Branch>,
            ffi.Pointer<YTransaction>, ffi.Uint32, ffi.Pointer<ffi.Char>)>(
    symbol: 'yxmlelem_insert_elem', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> yxmlelem_insert_elem(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
  int index,
  ffi.Pointer<ffi.Char> name,
);

/// Inserts an `YXmlText` as a child of a current node at the given `index` and returns its
/// pointer.
///
/// An `index` value must be between 0 and (inclusive) length of a current XML element (use
/// [yxmlelem_child_len] function to determine its length).
@ffi.Native<
        ffi.Pointer<Branch> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, ffi.Uint32)>(
    symbol: 'yxmlelem_insert_text', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> yxmlelem_insert_text(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
  int index,
);

/// Removes a consecutive range of child elements (of specified length) from the current
/// `YXmlElement`, starting at the given `index`. Specified range must fit into boundaries of current
/// XML node children, otherwise this function will panic at runtime.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Uint32)>(
    symbol: 'yxmlelem_remove_range', assetId: 'package:y_dart/y_dart')
external void yxmlelem_remove_range(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
  int index,
  int len,
);

/// Returns an XML child node (either a `YXmlElement` or `YXmlText`) stored at a given `index` of
/// a current `YXmlElement`. Returns null pointer if `index` was outside of the bound of current XML
/// node children.
///
/// Returned value should be eventually released using [youtput_destroy].
@ffi.Native<
    ffi.Pointer<YOutput> Function(
        ffi.Pointer<Branch>,
        ffi.Pointer<YTransaction>,
        ffi.Uint32)>(symbol: 'yxmlelem_get', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> yxmlelem_get(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
  int index,
);

/// Returns the length of the `YXmlText` string content in bytes (without the null terminator
/// character)
@ffi.Native<
        ffi.Uint32 Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxmltext_len', assetId: 'package:y_dart/y_dart')
external int yxmltext_len(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
);

/// Returns a null-terminated UTF-8 encoded string content of a current `YXmlText` shared data type.
///
/// Generated string resources should be released using [ystring_destroy] function.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxmltext_string', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> yxmltext_string(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
);

/// Inserts a null-terminated UTF-8 encoded string a a given `index`. `index` value must be between
/// 0 and a length of a `YXmlText` (inclusive, accordingly to [yxmltext_len] return value), otherwise
/// this function will panic.
///
/// A `str` parameter must be a null-terminated UTF-8 encoded string. This function doesn't take
/// ownership over a passed value - it will be copied and therefore a string parameter must be
/// released by the caller.
///
/// A nullable pointer with defined `attrs` will be used to wrap provided text with
/// a formatting blocks. `attrs` must be a map-like type.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Pointer<ffi.Char>, ffi.Pointer<YInput>)>(
    symbol: 'yxmltext_insert', assetId: 'package:y_dart/y_dart')
external void yxmltext_insert(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  int index,
  ffi.Pointer<ffi.Char> str,
  ffi.Pointer<YInput> attrs,
);

/// Inserts an embed content given `index`. `index` value must be between 0 and a length of a
/// `YXmlText` (inclusive, accordingly to [ytext_len] return value), otherwise this
/// function will panic.
///
/// A `str` parameter must be a null-terminated UTF-8 encoded string. This function doesn't take
/// ownership over a passed value - it will be copied and therefore a string parameter must be
/// released by the caller.
///
/// A nullable pointer with defined `attrs` will be used to wrap provided text with
/// a formatting blocks. `attrs` must be a map-like type.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Pointer<YInput>, ffi.Pointer<YInput>)>(
    symbol: 'yxmltext_insert_embed', assetId: 'package:y_dart/y_dart')
external void yxmltext_insert_embed(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  int index,
  ffi.Pointer<YInput> content,
  ffi.Pointer<YInput> attrs,
);

/// Wraps an existing piece of text within a range described by `index`-`len` parameters with
/// formatting blocks containing provided `attrs` metadata. `attrs` must be a map-like type.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Uint32, ffi.Pointer<YInput>)>(
    symbol: 'yxmltext_format', assetId: 'package:y_dart/y_dart')
external void yxmltext_format(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  int index,
  int len,
  ffi.Pointer<YInput> attrs,
);

/// Removes a range of characters, starting a a given `index`. This range must fit within the bounds
/// of a current `YXmlText`, otherwise this function call will fail.
///
/// An `index` value must be between 0 and the length of a `YXmlText` (exclusive, accordingly to
/// [yxmltext_len] return value).
///
/// A `length` must be lower or equal number of characters (counted as UTF chars depending on the
/// encoding configured by `YDoc`) from `index` position to the end of of the string.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Uint32)>(
    symbol: 'yxmltext_remove_range', assetId: 'package:y_dart/y_dart')
external void yxmltext_remove_range(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  int idx,
  int len,
);

/// Inserts an XML attribute described using `attr_name` and `attr_value`. If another attribute with
/// the same name already existed, its value will be replaced with a provided one.
///
/// Both `attr_name` and `attr_value` must be a null-terminated UTF-8 encoded strings. Their
/// contents are being copied, therefore it's up to a function caller to properly release them.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>(
    symbol: 'yxmltext_insert_attr', assetId: 'package:y_dart/y_dart')
external void yxmltext_insert_attr(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> attr_name,
  ffi.Pointer<ffi.Char> attr_value,
);

/// Removes an attribute from a current `YXmlText`, given its name.
///
/// An `attr_name`must be a null-terminated UTF-8 encoded string.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>)>(
    symbol: 'yxmltext_remove_attr', assetId: 'package:y_dart/y_dart')
external void yxmltext_remove_attr(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> attr_name,
);

/// Returns the value of a current `YXmlText`, given its name, or a null pointer if not attribute
/// with such name has been found. Returned pointer is a null-terminated UTF-8 encoded string, which
/// should be released using [ystring_destroy] function.
///
/// An `attr_name` must be a null-terminated UTF-8 encoded string.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>(
    symbol: 'yxmltext_get_attr', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> yxmltext_get_attr(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> attr_name,
);

/// Returns a collection of chunks representing pieces of `YText` rich text string grouped together
/// by the same formatting rules and type. `chunks_len` is used to inform about a number of chunks
/// generated this way.
///
/// Returned array needs to be eventually deallocated using `ychunks_destroy`.
@ffi.Native<
        ffi.Pointer<YChunk> Function(ffi.Pointer<Branch>,
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytext_chunks', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YChunk> ytext_chunks(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Uint32> chunks_len,
);

/// Deallocates result of `ytext_chunks` method.
@ffi.Native<ffi.Void Function(ffi.Pointer<YChunk>, ffi.Uint32)>(
    symbol: 'ychunks_destroy', assetId: 'package:y_dart/y_dart')
external void ychunks_destroy(
  ffi.Pointer<YChunk> chunks,
  int len,
);

/// Releases all resources related to a corresponding `YOutput` cell.
@ffi.Native<ffi.Void Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_destroy', assetId: 'package:y_dart/y_dart')
external void youtput_destroy(
  ffi.Pointer<YOutput> val,
);

/// Function constructor used to create JSON-like NULL `YInput` cell.
/// This function doesn't allocate any heap resources.
@ffi.Native<YInput Function()>(
    symbol: 'yinput_null', assetId: 'package:y_dart/y_dart')
external YInput yinput_null();

/// Function constructor used to create JSON-like undefined `YInput` cell.
/// This function doesn't allocate any heap resources.
@ffi.Native<YInput Function()>(
    symbol: 'yinput_undefined', assetId: 'package:y_dart/y_dart')
external YInput yinput_undefined();
